--- a/web/packages/sequence/css/src/elements/header_and_nav.scss
+++ b/web/packages/sequence/css/src/elements/header_and_nav.scss
@@ -1,16 +1,16 @@
 header {text-transform:uppercase;
-  a {color:$theme-gray-light;text-decoration:none !important;
-    &:hover, &:active, &:focus {color:lighten($theme-orange, 12%);}
+  a {color:$theme-light-color;text-decoration:none !important;
+    &:hover, &:active, &:focus {color:$theme-highlight-color;}
     img {padding:0;}
   }
   figure {position:relative;width:100%;margin:0;}
-  nav {position:fixed;top:0;bottom:0;left:100%;height:100%;width:$nav-sidebar-width;background:$theme-gray-dark;z-index:4;
+  nav {position:fixed;top:0;bottom:0;left:100%;height:100%;width:$nav-sidebar-width;background:$theme-dark-color;z-index:4;
     &::after {visibility:hidden;opacity:0;position:fixed;content:'';display:block;top:0;bottom:0;min-height:100%;right:100%;width:1000%;background:rgba(0,0,0,0.8);z-index:-1;@include transform(translateZ(0));@include transition(all $mask-animate-time ease);}
-    .trigger {color:$theme-orange;display:inline-block;padding:1rem;position:absolute;top:0;right:100%;z-index:4;}
+    .trigger {color:$theme-highlight-color;display:inline-block;padding:1rem;position:absolute;top:0;right:100%;z-index:4;}
     .inner {position:relative;width:100%;height:100%;@include scrollOverflow;}
     ul {list-style:none;padding:0;margin:0;
       li {
-        a {display:block;border-top:1px solid $theme-orange;
+        a {display:block;border-top:1px solid $theme-highlight-color;
           span {padding:1rem;display:block;}
         }
         &:first-child a {border-top:0;}
@@ -20,7 +20,7 @@ header {text-transform:uppercase;
 }
 
 @media screen and (min-width:$screen-sm){
-  header {background:rgba($theme-gray-dark,0.9);position:fixed;top:0;left:0;right:0;width:100%;z-index:4;
+  header {background:$theme-header-bg-color;position:fixed;top:0;left:0;right:0;width:100%;z-index:4;
     figure {padding:0 2rem;
       a[href] {padding:0.75rem 0;display:block;max-width:180px;}
     }
