--- a/web/packages/sequence/themes/sequence/css/theme.less
+++ b/web/packages/sequence/themes/sequence/css/theme.less
@@ -4,45 +4,27 @@
 // Fonts file
 @import ~"@{preset-fonts-file}";
 
+html, body {font-size:@theme-font-type-font-size;}
+
 body {
-  color:@body-type-type-color;
-  font-size:@body-type-type-font-size;
-  font-family:@body-type-type-font-family;
-  font-weight:@body-type-type-font-weight;
-  text-transform:@body-type-type-text-transform;
-  font-style:@body-type-type-font-style;
-  background-color:@body-background-color;
+  background:@theme-body-bg-color;
+  font-family:@theme-font-type-font-family;
+  color:@theme-font-type-font-color;
+  font-weight:@theme-font-type-font-weight;
 
   #c-level-1 {
     // Inputs
     input, textarea {
-      background-color:@button-background-color;
-      border-color:@input-border-color;
+      color:@theme-input-font-color;
+      background-color:@theme-input-bg-color;
+      border-color:@theme-input-bg-color;
     }
 
     // Buttons
     button, .btn, .btn-default {
-      background-color:@button-background-color;
-      border-color:@button-border-color;
-    }
-
-    // Header Tags
-    h1,h2,h3,h4,h5,h6 {
-      color:@header-tags-color;
-    }
-
-    // Header
-    header {
-      font-family:@header-type-type-font-family;
-      font-weight:@header-type-type-font-weight;
-      font-size:@header-type-type-font-size;
-      text-transform:@header-type-type-text-transform;
-      font-style:@header-type-type-font-style;
-      color:@header-type-type-color;
-
-      a {
-        color:inherit;
-      }
+      color:@theme-button-font-color;
+      background-color:@theme-button-bg-color;
+      border-color:@theme-button-bg-color;
     }
 
     // Sections
@@ -57,16 +39,16 @@ body {
 
     // Accordions
     [accordion] .group .accordion-header {
-      color:@accordion-header-color;
+      color:@theme-highlight-color;
     }
 
     // Generic Classes
     .highlight-color {
-      color:@highlight-color;
+      color:@theme-highlight-color;
     }
 
     .anglified::before {
-      color:@highlight-color;
+      color:@theme-highlight-color;
     }
   }
 }
@@ -74,10 +56,6 @@ body {
 @media screen and (min-width:768px){
   #c-level-1 {
     // Header
-    header {background:@header-background-color;
-      nav ul li {
-        font-size:@header-type-type-font-size;
-      }
-    }
+    header {background:@theme-header-bg-color;}
   }
 }
