--- a/web/packages/sequence/css/core.css
+++ b/web/packages/sequence/css/core.css
@@ -2003,5 +2003,110 @@ select[multiple].input-lg {
 @media print {
   .hidden-print {
     display: none !important; } }
+@font-face {
+  font-family: 'icomoon';
+  src: url("/packages/sequence/fonts/icomoon/icomoon.eot?-4xwedh");
+  src: url("/packages/sequence/fonts/icomoon/icomoon.eot?#iefix-4xwedh") format("embedded-opentype"), url("/packages/sequence/fonts/icomoon/icomoon.woff?-4xwedh") format("woff"), url("/packages/sequence/fonts/icomoon/icomoon.ttf?-4xwedh") format("truetype"), url("/packages/sequence/fonts/icomoon/icomoon.svg?-4xwedh#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+[class^="icn-"], [class*=" icn-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Enable Ligatures ================ */
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  -o-font-feature-settings: "liga";
+  font-feature-settings: "liga";
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icn-layers:before {
+  content: "\e031"; }
+
+.icn-adjust:before {
+  content: "\f042"; }
+
+.icn-plus2:before {
+  content: "\f067"; }
+
+.icn-minus:before {
+  content: "\f068"; }
+
+.icn-bars:before {
+  content: "\f0c9"; }
+
+.icn-circle-o:before {
+  content: "\f10c"; }
+
+.icn-circle:before {
+  content: "\f111"; }
+
+.icn-bullseye:before {
+  content: "\f140"; }
+
+.icn-close:before {
+  content: "\e680"; }
+
+.icn-close-circle:before {
+  content: "\e681"; }
+
+.icn-angle-up:before {
+  content: "\e682"; }
+
+.icn-angle-up-circle:before {
+  content: "\e683"; }
+
+.icn-angle-right:before {
+  content: "\e684"; }
+
+.icn-angle-right-circle:before {
+  content: "\e685"; }
+
+.icn-angle-left:before {
+  content: "\e686"; }
+
+.icn-angle-left-circle:before {
+  content: "\e687"; }
+
+.icn-angle-down:before {
+  content: "\e688"; }
+
+.icn-angle-down-circle:before {
+  content: "\e689"; }
+
+.icn-plus:before {
+  content: "\e623"; }
+
+.icn-less:before {
+  content: "\e644"; }
+
+.icn-info:before {
+  content: "\e647"; }
+
+.icn-help1:before {
+  content: "\e64a"; }
+
+.icn-expand1:before {
+  content: "\e657"; }
+
+.icn-check:before {
+  content: "\e66c"; }
+
+.icn-attention:before {
+  content: "\e67b"; }
+
+.icn-google-plus:before {
+  content: "\ea88"; }
+
+.icn-twitter:before {
+  content: "\ea91"; }
 
 /*# sourceMappingURL=core.css.map */
