--- a/web/packages/sequence/css/src/core.scss
+++ b/web/packages/sequence/css/src/core.scss
@@ -10,4 +10,4 @@
 @import '../../bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/forms';
 @import '../../bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/utilities';
 @import '../../bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/responsive-utilities';
-//@import '../../bower_components/font-awesome/scss/font-awesome';
+@import '3rd_party/icomoon';
