--- a/web/packages/sequence/css/src/elements/header_and_nav.scss
+++ b/web/packages/sequence/css/src/elements/header_and_nav.scss
@@ -20,7 +20,7 @@ header {text-transform:uppercase;
 }
 
 @media screen and (min-width:$screen-sm){
-  header {background:$theme-header-bg-color;position:fixed;top:0;left:0;right:0;width:100%;z-index:4;
+  header {background:$theme-header-bg-color;position:fixed;top:0;left:0;right:0;width:100%;z-index:4;min-height:70px;
     figure {padding:0 2rem;
       a[href] {padding:0.75rem 0;display:block;max-width:180px;}
     }
