--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -1,6 +1,7 @@
 [masthead]{width:100%;height:100%;position:relative;overflow:hidden;
-  .node {visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
+  .node {display:table;visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
     &:first-of-type {visibility:visible;opacity:1;}
+    .inner {width:100%;height:100%;display:table-cell;vertical-align:middle;text-align:left;}
     .node-content {font-size:1.3rem;/*color:#fff;*/display:inline-block;max-width:55%;padding-left:7rem;
       a {color:inherit;/*color:#fff;*/
         &:hover {text-decoration:underline;}
