--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -1,22 +1,21 @@
 [masthead]{width:100%;height:100%;position:relative;overflow:hidden;
   .node {display:table;visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
     &:first-of-type {visibility:visible;opacity:1;}
-    .inner {width:100%;height:100%;display:table-cell;vertical-align:middle;text-align:left;}
-    .node-content {font-size:1.3rem;/*color:#fff;*/display:inline-block;max-width:55%;padding-left:7rem;
-      a {color:inherit;/*color:#fff;*/
-        &:hover {text-decoration:underline;}
-      }
-      ul {list-style:none;padding:0 0 0 18px;
-        li {position:relative;
-          &::before {content: "\e684";font-family:'icomoon';position:absolute;right:100%;top:50%;display:inline-block;color:$theme-highlight-color;font-size:150%;@include transform(translateY(-50%));}
-        }
-      }
+  }
+  .inner {width:100%;height:100%;display:table-cell;vertical-align:middle;text-align:left;}
+  .node-content {font-size:1.3rem;display:inline-block;max-width:55%;padding-left:7rem;}
+  a {color:inherit;
+    &:hover {text-decoration:underline;}
+  }
+  ul {list-style:none;padding:0 0 0 18px;
+    li {position:relative;
+      &::before {content: "\e684";font-family:'icomoon';position:absolute;right:100%;top:50%;display:inline-block;color:$theme-highlight-color;font-size:150%;@include transform(translateY(-50%));}
     }
   }
 
   // Navigation arrows
-  .arrows {color:$theme-light-color;position:absolute;top:50%;font-size:5rem;padding:0;line-height:1;@include transform(translateY(-100%));@include transition(all 0.25s ease);
-    &:hover {color:lighten($theme-light-color, 12%);}
+  .arrows {color:$theme-light-color;position:absolute;top:50%;font-size:5rem;padding:0;line-height:1;@include transform(translateY(-100%));@include transition(all 0.25s ease);z-index:1;
+    &:hover {color:lighten($theme-light-color, 12%);text-decoration:none;}
     &[class*="left"]{left:0;
       &:hover {padding-left:0.25rem;}
     }
@@ -29,5 +28,18 @@
     a {color:$theme-light-color;display:inline-block;padding:0.25rem;font-size:14px;line-height:1;
       &:hover, &.active {color:$theme-dark-color;}
     }
+  }
+}
+
+@media screen and (max-width:$screen-sm){
+  [masthead] {
+    .inner {text-align:center;}
+    .node-content {max-width:80%;padding:0 2rem;margin:0 auto;text-align:center;
+      p, ul {display:none;}
+      h1 {font-size:180% !important;
+        span {font-size:inherit !important;}
+      }
+    }
+    .arrows {font-size:4rem;top:100%;}
   }
 }
