--- a/web/packages/sequence/themes/sequence/css/presets/defaults.less
+++ b/web/packages/sequence/themes/sequence/css/presets/defaults.less
@@ -12,7 +12,7 @@
 @theme-light-color:             #959595;
 @theme-dark-color:              #222222;
 
-@theme-header-bg-color:         rgba(red(#222222), green(#222222), blue(#222222), 0.85);
+@theme-header-bg-color:         rgba(34,34,34,0.85);
 
 @theme-input-bg-color:          #4e4e4e;
 @theme-input-font-color:        #fff;
@@ -20,35 +20,3 @@
 @theme-button-font-color:       #fff;
 
 @theme-section-spacing-size:    90px;
-
-//@theme-accordion-header-color:  #f58220;
-
-// General Settings
-//@body-background-color:             #000;
-//@body-type-type-font-family:        'Ropa Sans';
-//@body-type-type-font-weight:        300;
-//@body-type-type-text-transform:     'none';
-//@body-type-type-font-style:         'normal';
-//@body-type-type-color:              #fff;
-//@body-type-type-font-size:          16px;
-//
-//// Header
-//@header-background-color:           rgba(red(#222222), green(#222222), blue(#222222), 0.85);
-//@header-type-type-font-family:      'Ropa Sans';
-//@header-type-type-font-weight:      100;
-//@header-type-type-text-transform:   'none';
-//@header-type-type-font-style:       'normal';
-//@header-type-type-color:            #959595;
-//@header-type-type-font-size:        1rem;
-//
-//// Body Contents
-//@section-spacing-size:              90px;
-//@header-tags-color:                 #fff;
-//@highlight-color:                   #f58220;
-//@accordion-header-color:            #f58220;
-//
-//// Form Elements
-//@input-background-color:            #4e4e4e;
-//@input-border-color:                #4e4e4e;
-//@button-background-color:           #4e4e4e;
-//@button-border-color:               #4e4e4e;
