--- a/web/packages/sequence/themes/sequence/css/theme.less
+++ b/web/packages/sequence/themes/sequence/css/theme.less
@@ -97,6 +97,10 @@ body {
       color:@theme-highlight-color;
     }
 
+    [isotope]{
+      margin-bottom:-@theme-section-spacing-size;
+    }
+
     aside[scroll-top]:hover {
       background:rgba(red(@theme-highlight-color), green(@theme-highlight-color), blue(@theme-highlight-color), 0.85);
     }
