--- a/web/packages/sequence/css/src/elements/header_and_nav.scss
+++ b/web/packages/sequence/css/src/elements/header_and_nav.scss
@@ -8,7 +8,7 @@ header {text-transform:uppercase;z-index:4;
   }
   nav {position:fixed;top:0;bottom:0;left:100%;height:100%;width:$nav-sidebar-width;background:$theme-dark-color;z-index:4;
     &::after {visibility:hidden;opacity:0;position:fixed;content:'';display:block;top:0;bottom:0;min-height:100%;right:100%;width:1000%;background:rgba(0,0,0,0.8);z-index:-1;@include transform(translateZ(0));@include transition(all $mask-animate-time ease);}
-    .trigger {color:$theme-highlight-color;display:inline-block;padding:1rem;position:absolute;top:0;right:100%;z-index:4;}
+    .trigger {margin:0.5rem;display:inline-block;padding:1rem;position:absolute;top:0;right:100%;z-index:4;background:transparent url('#{$image-path}/nav_icon.svg') no-repeat 50% 50%;background-size:cover;}
     .inner {position:relative;width:100%;height:100%;@include scrollOverflow;}
     ul {list-style:none;padding:0;margin:0;
       li {
@@ -21,16 +21,18 @@ header {text-transform:uppercase;z-index:4;
   }
 }
 
-@media screen and (min-width:$screen-sm){
-  header {background:$theme-header-bg-color;position:fixed;top:0;left:0;right:0;width:100%;min-height:70px;
-    figure {padding:0 2rem;}
-    nav {position:absolute;left:auto;right:2rem;width:auto;background:transparent;
-      .trigger {display:none;}
-      .inner {overflow:visible;}
-      ul {height:100%;font-size:0;line-height:0;
-        li {height:100%;display:inline-block;font-size:1rem;line-height:1;
-          a {display:table;width:100%;height:100%;border:0;
-            span {padding:0.25rem 1.4rem 0;display:table-cell;width:100%;height:100%;vertical-align:middle;text-align:center;}
+html:not(.touch){
+  @media screen and (min-width:$screen-sm){
+    header {background:$theme-header-bg-color;position:fixed;top:0;left:0;right:0;width:100%;min-height:70px;
+      figure {padding:0 2rem;}
+      nav {position:absolute;left:auto;right:2rem;width:auto;background:transparent;
+        .trigger {display:none;}
+        .inner {overflow:visible;}
+        ul {height:100%;font-size:0;line-height:0;
+          li {height:100%;display:inline-block;font-size:1rem;line-height:1;
+            a {display:table;width:100%;height:100%;border:0;
+              span {padding:0.25rem 1.4rem 0;display:table-cell;width:100%;height:100%;vertical-align:middle;text-align:center;}
+            }
           }
         }
       }
